fix: Change date format in VisitNotes and Vital signs